--- a/main.css
+++ b/main.css
@@ -2,3 +2,32 @@ body{
     background-color: black;
     color: aliceblue;
 }
+.test{
+    color: black;
+}
+.dinoName{
+    color: bisque;
+}
+.container{
+    display: flex;
+    flex-flow: column wrap;
+    align-content: center;
+    margin: auto;
+    border: 2px solid red;
+    max-width: 1000px;
+    background-color: rgb(73, 51, 21);
+    opacity: .7;
+}
+img{
+    height: 200px;
+    width: 200px;
+}
+.cardDiv{
+    display: flex;
+    flex-flow: column wrap;
+    align-content: center;
+    border: 2px solid blue;
+    margin: 20px 0px 20px 0px;
+    background: transparent;
+    width: 500px;
+}
