--- a/main.css
+++ b/main.css
@@ -1,7 +1,41 @@
 body{
-    background-color: black;
-    color: aliceblue;
+    background-color: aliceblue;;
+    color: black;
 }
+
+.mainContainer{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    text-align: center;
+}
+
+.assignContainer{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-self: center;
+    background-color: lavender;
+    max-width: 1000px;
+}
+
+.assignCard{
+    display: flex;
+    flex-flow: column wrap;
+    border: 4px double black;
+    background-color: lightblue;
+    padding: 10px;
+    text-align: center;
+    margin: 25px;
+    width: 200px;
+    text-justify: auto;
+}
+
+.assignTitle{
+    background-color: rgba(255, 250, 250, 0.849);
+    border: 2px groove darkgrey;
+}
+
 .test{
     color: black;
 }
